--- a/css/style.css
+++ b/css/style.css
@@ -28,14 +28,6 @@ header {
     background-color: rgb(214, 169, 255);
     box-shadow: 2px 3px 3px rgba(52, 17, 73, 0.699); 
 }
-section {
-    /*margin: 1em;
-    display: grid;
-    grid-template-columns: repeat(4, 8rem);
-    grid-template-rows: repeat (4, 8rem);
-    grid-gap: 0.3rem;
-    perspective: 800px;*/
-}
 
 .card {
     position: relative;
@@ -55,7 +47,7 @@ section {
 }
 
 .toggleCard {
-    transform: rotateY(180deg); /*transform: rotateY(0deg); 180 per flippare le carte*/
+    transform: rotateY(180deg);
 }
 
 button {
